clusters/infrastructure/traefik/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.erwanleboucher.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-api
                port:
                  name: traefik
  tls:
    - secretName: traefik-dashboard-tls
      hosts:
        - traefik.erwanleboucher.dev
